added how it work section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="home.css">
     <title>KabaadiWaala</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -21,13 +23,35 @@
             </ul>
         </nav>
     </header>
-    
-    <div id="hero">
+
+    <div id="hero" class="contain">
         <h2 class="herotext">
             Sell your "Kabaad 🗑️"<br>
             Online with <span>KabaadiWallah</span>
         </h2>
         <video src="images/A3JDLY77FL6W9XPO.mp4" autoplay width="500rem"></video>
     </div>
+
+    <div class="howWork contain">
+
+        <h2>How it Works</h2>
+
+        <div class="howWorkFlex">
+            <div class="card">
+                <p>Schedule Pickup</p>
+                <img src="images/card1.png  " alt="">
+            </div>
+            <div class="card">
+                <p>Pickup at your address</p>
+                <img src="images/card2.png  " alt="">
+            </div>
+            <div class="card">
+                <p>Schedule Pickup</p>
+                <img src="images/card3.png  " alt="">
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
