--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
+    <link rel="icon" href="favicon/KabaadiWallah.png">
     <title>KabaadiWaala</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="home.html"><img src="images/KabaadiWallah.png" width="134px"></a>
+            <a href="index.html"><img src="images/KabaadiWallah.png" width="134px"></a>
         </div>
         <nav id="navbar">
             <ul id="ulnav">
-                <li><a href="home.html" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
