--- a/index.html
+++ b/index.html
@@ -5,36 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="home.css">
-    <link rel="icon" href="favicon/KabaadiWallah.png">
     <title>KabaadiWaala</title>
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <a href="index.html"><img src="images/KabaadiWallah.png" width="134px"></a>
-        </div>
-        <nav id="navbar">
-            <ul id="ulnav">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+    <nav class="navbar navbar-expand-lg">
+        <img src="images/KabaadiWallah.png" alt="">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html">Shop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
             </ul>
-        </nav>
-    </header>
-
-    <div id="hero" class="contain">
-        <h2 class="herotext">
-            Sell your "Kabaad 🗑️"<br>
-            Online with <span>KabaadiWallah</span>
-        </h2>
-        <video src="images/A3JDLY77FL6W9XPO.mp4" autoplay width="500rem"></video>
+        </div>
+    </nav>
+    <div id="hero">
+        <div id="heroContent" class="contain">
+            <div id="hero-text">
+                <h2 class="herotext">
+                    Sell your "Kabaad 🗑️"<br>
+                    Online with <span>KabaadiWallah</span>
+                </h2>
+                <p>
+                    sjdnhskidcjsoxdksjcxbhsoxclskxcjxch nskcsnskcjslk
+                </p>
+            </div>
+            <video src="images/pexels-artem-podrez-7048759.mp4" autoplay width="500rem"></video>
+        </div>
+        
     </div>
-
     <div class="howWork contain">
-
+    
         <h2>How it Works</h2>
 
         <div class="howWorkFlex">
@@ -53,6 +69,12 @@
         </div>
     </div>
 
-</body>
 
-</html>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
