Fully updated home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar fixed-top navbar-expand-lg">
         <img src="images/KabaadiWallah.png" alt="">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,14 +41,24 @@
                     Sell your "Kabaad 🗑️"<br>
                     Online with <span>KabaadiWallah</span>
                 </h2>
-                <p>
-                    sjdnhskidcjsoxdksjcxbhsoxclskxcjxch nskcsnskcjslk
+                <p style="color: gray;">
+                    Paper - Plastic - Metals - Appliances <br>
+                    One Step towards Sustainanbility 🌱
                 </p>
             </div>
-            <video src="images/pexels-artem-podrez-7048759.mp4" autoplay width="500rem"></video>
+            <video src="images/pexels-artem-podrez-7048759.mp4" autoplay width="500rem" loop></video>
         </div>
         
     </div>
+    <div id="needs">
+        <img src="images/Screenshot 2023-03-20 142337.png" alt="" width="84%">
+    </div>
+    <div id="farak">
+        <img src="images/Screenshot 2023-03-20 143921.png" alt="" width="100%">
+    </div>
+
+    <hr>
+
     <div class="howWork contain">
     
         <h2>How it Works</h2>
@@ -56,19 +66,109 @@
         <div class="howWorkFlex">
             <div class="card">
                 <p>Schedule Pickup</p>
-                <img src="images/card1.png  " alt="">
+                <video autoplay loop src="images/card1.mp4" alt="">
             </div>
             <div class="card">
                 <p>Pickup at your address</p>
-                <img src="images/card2.png  " alt="">
+                <video autoplay loop src="images/card2.mp4" alt="">
             </div>
             <div class="card">
                 <p>Schedule Pickup</p>
-                <img src="images/card3.png  " alt="">
+                <video autoplay loop src="images/card3.mp4" alt="">
             </div>
         </div>
     </div>
 
+    <footer>
+        <div class="col">
+            <img src="images/KabaadiWallah.png" width="128px">
+            <h4>
+                Contact
+            </h4>
+            <p>
+                <strong>Address:</strong> 573, Wellington Rd, Street 36, San Francisco
+            </p>
+            <p>
+                <strong>Phone:</strong> +01 2222 454 / (+92) 01 2345 6789
+            </p>
+            <p>
+                <strong>Hours:</strong> 10.00 - 18.00 [Monday - Saturday]
+            </p>
+            <div id="follow">
+                <h4>
+                    Follow Us
+                </h4>
+                <div class="icon">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <h4>
+                About
+            </h4>
+            <a href="#">
+                About Us
+            </a>
+            <a href="#">
+                Delivery Information
+            </a>
+            <a href="#">
+                Privacy Policy
+            </a>
+            <a href="#">
+                Terms & Conditions
+            </a>
+            <a href="#">
+                Contact Us
+            </a>
+        </div>
+        <div class="col">
+            <h4>
+                My Account
+            </h4>
+            <a href="#">
+                Sign Up
+            </a>
+            <a href="#">
+                Veiw Cart
+            </a>
+            <a href="#">
+                My Wishlist
+            </a>
+            <a href="#">
+                Track My Order
+            </a>
+            <a href="#">
+                Help
+            </a>
+        </div>
+        <div class="col">
+            <h4>
+                Install App
+            </h4>
+            <p>
+                From App Store and Google Play Store
+            </p>
+            <div class="install">
+                <img src="images/app.jpg" alt="">
+                <img src="images/play.jpg" alt="">
+            </div>
+            <p>
+                Secured Payment Gateways
+            </p>
+            <img src="images/pay.png" alt="">
+        </div>
+        <div id="copyright">
+            <p>
+                © 2023 CopyRight TeamQuark-X RajasthanHackathon
+            </p>
+        </div>
+    </footer>
 
 
 
