Added Call to option

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                 Contact
             </h4>
             <p>
-                <strong>Address:</strong> 573, Wellington Rd, Street 36, San Francisco
+                <strong>Address:</strong> PCE, Sitapur, Jaipur, Rajasthan
             </p>
             <p>
-                <strong>Phone:</strong> +01 2222 454 / (+92) 01 2345 6789
+                <a href="tel:0123456789">Phone : 8302432571</a>
             </p>
             <p>
-                <strong>Hours:</strong> 10.00 - 18.00 [Monday - Saturday]
+                <a href="mailto:jhkndteam@gmail.com">Email :  jhkndteam@gmail.com</a>
             </p>
             <div id="follow">
                 <h4>
