--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="homi.css">
     <title>KabaadiWaala</title>
 </head>
 
@@ -35,6 +35,7 @@
             </ul>
         </div>
     </nav>
+
     <div id="hero">
         <div id="heroContent" class="contain">
             <div id="hero-text">
@@ -96,11 +97,11 @@
             </div>
             <div class="card">
                 <p>Pickup at your address</p>
-                <video autoplay loop src="images/card1.mp4" alt="">
+                <video autoplay loop src="images/card2.mp4" alt="">
             </div>
             <div class="card">
                 <p>Schedule Pickup</p>
-                <video autoplay loop src="images/card1.mp4" alt="">
+                <video autoplay loop src="images/card3.mp4" alt="">
             </div>
         </div>
     </div>
