--- a/contact.html
+++ b/contact.html
@@ -53,15 +53,15 @@
             <div>
                 <li>
                     <i class="fas fa-map"></i>
-                    <p>17E, 18th Cross Rd, Sector 3rd, HSR Layout, Bengaluru, Karnataka</p>
+                    <p>Poornima College of Engineering, Sitapura, Jaipur</p>
                 </li>
                 <li>
                     <i class="far fa-envelope"></i>
-                    <p>contact@example.com</p>
+                    <a href="mailto:lakhan06gupta@gmail.com">lakhan06gupta@gmail.com</a>
                 </li>
                 <li>
                     <i class="fas fa-phone-alt"></i>
-                    <p>contact@example.com</p>
+                    <a href="tel:9875760411">+91 9875760411</a>
                 </li>
                 <li>
                     <i class="far fa-clock"></i>
@@ -126,10 +126,10 @@
                 Contact
             </h4>
             <p>
-                <strong>Address:</strong> 573, Wellington Rd, Street 36, San Francisco
+                <strong>Address:</strong>Poornima College of Engineering, Sitapura, Jaipur
             </p>
             <p>
-                <strong>Phone:</strong> +01 2222 454 / (+92) 01 2345 6789
+                <strong>Phone:</strong><a href="tel=9875760411"> +91 9875760411</a>
             </p>
             <p>
                 <strong>Hours:</strong> 10.00 - 18.00 [Monday - Saturday]
@@ -151,7 +151,7 @@
             <h4>
                 About
             </h4>
-            <a href="#">
+            <a href="about.html">
                 About Us
             </a>
             <a href="#">
@@ -163,7 +163,7 @@
             <a href="#">
                 Terms & Conditions
             </a>
-            <a href="#">
+            <a href="contact.html">
                 Contact Us
             </a>
         </div>
@@ -175,7 +175,7 @@
                 Sign Up
             </a>
             <a href="#">
-                Veiw Cart
+                View Cart
             </a>
             <a href="#">
                 My Wishlist
@@ -205,7 +205,7 @@
         </div>
         <div id="copyright">
             <p>
-                © 2022 Chinmay Jain E-Commerce Template
+                © 2023 CopyRight TeamQuark-X RajasthanHackathon
             </p>
         </div>
     </footer>
