--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <h2>
             #KnowUs
         </h2>
-        <p>Lorem ipsum dolor sit amet,consectetur</p>
+        <p>"Transforming waste into wealth - our commitment to sustainable scrap management."</p>
     </section>
     
     <section id="about-head">
@@ -146,10 +146,10 @@
                 Contact
             </h4>
             <p>
-                <strong>Address:</strong> 573, Wellington Rd, Street 36, San Francisco
+                <strong>Address:</strong>Poornima College of Engineering, Sitapura, Jaipur
             </p>
             <p>
-                <strong>Phone:</strong> +01 2222 454 / (+92) 01 2345 6789
+                <strong>Phone:</strong><a href="tel=9875760411"> +91 9875760411</a>
             </p>
             <p>
                 <strong>Hours:</strong> 10.00 - 18.00 [Monday - Saturday]
