--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <button type="submit" id="submit">NEXT</button>
                 </form>
                 <p id="query">
-                   <i>for any support call</i> <span id="call-query">9875760411</span> 
+                   <i>for any support call</i> <a href="tel:9875760411"><span id="call-query">9875760411</span></a> 
                 </p>
             </div>
         </div>
@@ -113,10 +113,10 @@
                 Contact
             </h4>
             <p>
-                <strong>Address:</strong> 573, Wellington Rd, Street 36, San Francisco
+                <strong>Address:</strong>Poornima College of Engineering, Sitapura, Jaipur
             </p>
             <p>
-                <strong>Phone:</strong> +01 2222 454 / (+92) 01 2345 6789
+                <strong>Phone:</strong><a href="tel=9875760411"> +91 9875760411</a>
             </p>
             <p>
                 <strong>Hours:</strong> 10.00 - 18.00 [Monday - Saturday]
