--- a/about.html
+++ b/about.html
@@ -47,21 +47,14 @@
         <div>
             <h2>Who We Are?</h2>
             <p>
-                Lorem ipsum dolor sit amet,consectetur adipisicing elit,sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam,quis
-                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident,sunt in
-                culpa qui officia deserunt mollit anim id est laborum.
+                Kabaadi Wallah was created by keeping in mind to solve the problems constantly created in society such as the sector of scrap collection and treatment is highly unorganized, which is why the scrap collectors(traditional kabaadi waale) do not earn much, a growing population and economy, which means increased volumes of waste generated. This puts pressure on waste management facilities, which are already in short supply , a growing population and economy, which means increased volumes of waste generated. This puts pressure on waste management facilities, which are already in short supply. Our  mission is to manage all these outcomings and loop holes. Our company offers multiple range of services, such as scrap collection, sorting, processing, and recycling. We have created a community of Kabaadi Wallahs that can interact with the society. Also , it is an e-commerce website, in which customers can buy the upcycled products.
             </p>
             <abbr title="">
-                Create stunning images with as much or as little control as
-                you like thanks toachoice of Basic and Creative modes.
+                Paper - Plastic - Metals - Appliances One Step towards Sustainanbility 🌱
             </abbr>
             <br><br>
             <marquee loop="-1" scrollamount="5" width="100%" bgcolor="#ccc">
-                Create stunning images with as much or as little control as you like thanks toa
-                choice of Basic and Creative modes.
+                Paper - Plastic - Metals - Appliances One Step towards Sustainanbility 🌱
             </marquee>
         </div>
     </section>
